--- a/Wikipedia/Localizations/qqq.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/qqq.lproj/Localizable.strings
@@ -246,6 +246,7 @@
 "donate-accessibility-textfield-hint" = "Accessibility hint on donate form custom amount textfield for screen readers.";
 "donate-accessibility-transaction-fee-hint" = "Accessibility hint on donate form transaction fee checkbox for screen readers.";
 "donate-already-donated" = "Thank you toast shown when user clicks already donated on fundraising banner";
+"donate-apple-fine-print" = "Fine print displayed on donation form for Apple Pay, indicating that Apple is not in charge of raising money.";
 "donate-email-opt-in-text" = "Text next to email opt-in checkbox on donate form.";
 "donate-help-frequently-asked-questions" = "Help link at the bottom of the donate form, that takes user to a web view link with more info.";
 "donate-help-other-ways-to-give" = "Help link at the bottom of the donate form, that takes user to a web view link with more info.";
