--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -252,7 +252,7 @@
 "donate-help-other-ways-to-give" = "Other ways to give";
 "donate-help-problems-donating" = "Problems donating?";
 "donate-help-tax-deductibility-information" = "Tax deductibility information";
-"donate-later-title" = "We will remind you again tommorow.";
+"donate-later-title" = "We will remind you again tomorrow.";
 "donate-maximum-error-text" = "We cannot accept donations greater than $1 $2 through our website. Please contact our major gifts staff at benefactors@wikimedia.org.";
 "donate-minimum-error-text" = "Please select an amount (minimum $1 $2).";
 "donate-monthly-recurring-text" = "Make this a monthly recurring donation.";
