--- a/Wikipedia/Localizations/it.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/it.lproj/Localizable.strings
@@ -282,7 +282,7 @@
 "donate-success-subtitle" = "La tua generosità significa molto per noi.";
 "donate-success-title" = "Grazie!";
 "donate-title" = "Seleziona un importo";
-"donate-transaction-fee-opt-in-text" = "Vorrei aggiungere $1 per coprire le spese dell’operazione in modo che possiate utilizzare il 100% della mia donazione.";
+"donate-transaction-fee-opt-in-text" = "Vorrei aggiungere $1 per coprire le spese dell’operazione in modo che possiate utilizzare il 100%% della mia donazione.";
 "edit-bold-accessibility-label" = "Aggiungi la formattazione in grassetto";
 "edit-bold-remove-accessibility-label" = "Rimuovi la formattazione in grassetto";
 "edit-clear-formatting-accessibility-label" = "Rimuovi formattazione";
