Update SEAT views to use localized strings.

--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -1007,6 +1007,29 @@
 "share-social-mention-format" = "“$1” via Wikipedia: $2";
 "sort-by-recently-added-action" = "Recently added";
 "sort-by-title-action" = "Title";
+"suggested-edits-alt-text-alert-body" = "We're excited to introduce our new “Suggested Edits” feature. As it's still in the testing phase, we'd absolutely love to hear from you. Your insights and suggestions will be invaluable in helping us refine, enhance, or even reconsider this feature. Dive in, explore, and let us know your thoughts. Your feedback will shape its future!";
+"suggested-edits-alt-text-alert-title" = "Please help us refine the “Suggested Edits” feature!";
+"suggested-edits-alt-text-feedback" = "Feedback";
+"suggested-edits-alt-text-form-alt-text-placeholder" = "Describe this image";
+"suggested-edits-alt-text-form-alternative-text" = "Alternative text";
+"suggested-edits-alt-text-form-guidance" = "Guidance for writing alt-text";
+"suggested-edits-alt-text-form-guidance-1" = "• Describe main point";
+"suggested-edits-alt-text-form-guidance-2" = "• Under 125 characters";
+"suggested-edits-alt-text-form-guidance-3" = "• Context-aware";
+"suggested-edits-alt-text-form-guidance-4" = "• State function if needed";
+"suggested-edits-alt-text-form-guidance-5" = "• Highlight key parts";
+"suggested-edits-alt-text-form-image" = "Image";
+"suggested-edits-alt-text-form-textfield-footer" = "Text description for readers who cannot see the image";
+"suggested-edits-alt-text-form-view-examples" = "View examples";
+"suggested-edits-alt-text-learn-more" = "Learn more";
+"suggested-edits-alt-text-license-info" = "By publishing, you agree to the [Terms of Use](https://www.mediawiki.org/wiki/Wikimedia_Apps/Suggested_edits), and to irrevocably release your contributions under the [CC BY-SA 3.0](https://www.mediawiki.org/wiki/Wikimedia_Apps/Suggested_edits) license.";
+"suggested-edits-alt-text-read-full-article" = "Read full article →";
+"suggested-edits-alt-text-read-privacy-policy" = "Read privacy policy";
+"suggested-edits-alt-text-send-feedback" = "Send feedback";
+"suggested-edits-alt-text-skip-suggestion" = "Skip suggestion";
+"suggested-edits-alt-text-suggest-alt-text" = "Suggest alt text for image";
+"suggested-edits-alt-text-title" = "Add alt text";
+"suggested-edits-alt-text-view-image-details" = "View image details →";
 "table-of-contents-button-label" = "Table of contents";
 "table-of-contents-close-accessibility-hint" = "Close";
 "table-of-contents-close-accessibility-label" = "Close Table of contents";
