--- a/Wikipedia/Localizations/qqq.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/qqq.lproj/Localizable.strings
@@ -1007,6 +1007,29 @@
 "share-social-mention-format" = "Share format string for social platforms with an @mention. $1 is replaced with the article title, $2 is replaced with the article URL.";
 "sort-by-recently-added-action" = "Title of the sort action that allows sorting items by date added.";
 "sort-by-title-action" = "Title of the sort action that allows sorting items by title.";
+"suggested-edits-alt-text-alert-body" = "Body text for alt-text task feedback alert";
+"suggested-edits-alt-text-alert-title" = "Title for alt-text task feedback alert";
+"suggested-edits-alt-text-feedback" = "Text for feedback button";
+"suggested-edits-alt-text-form-alt-text-placeholder" = "Placeholder for textfield in alt-text form view.";
+"suggested-edits-alt-text-form-alternative-text" = "Title for header in alt-text form view.";
+"suggested-edits-alt-text-form-guidance" = "Header for guidance section in alt-text form view.";
+"suggested-edits-alt-text-form-guidance-1" = "Guidance point in alt-text form view.";
+"suggested-edits-alt-text-form-guidance-2" = "Guidance point in alt-text form view.";
+"suggested-edits-alt-text-form-guidance-3" = "Guidance point in alt-text form view.";
+"suggested-edits-alt-text-form-guidance-4" = "Guidance point in alt-text form view.";
+"suggested-edits-alt-text-form-guidance-5" = "Guidance point in alt-text form view.";
+"suggested-edits-alt-text-form-image" = "Title for image section in alt-text form view.";
+"suggested-edits-alt-text-form-textfield-footer" = "Description for textfield in alt-text form view.";
+"suggested-edits-alt-text-form-view-examples" = "Title for view examples button in alt-text form view.";
+"suggested-edits-alt-text-learn-more" = "Text for learn more button";
+"suggested-edits-alt-text-license-info" = "Footer text when publishing alt-text. Please do not remove the brackets or parentheses. Please do not translate or change the URL inside the parentheses.";
+"suggested-edits-alt-text-read-full-article" = "Text for read more button in alt-text view.";
+"suggested-edits-alt-text-read-privacy-policy" = "Text for read privacy policy button";
+"suggested-edits-alt-text-send-feedback" = "Text for send feedback button";
+"suggested-edits-alt-text-skip-suggestion" = "Text for skip suggestion button";
+"suggested-edits-alt-text-suggest-alt-text" = "Text for suggest alt-text button";
+"suggested-edits-alt-text-title" = "Text title in alt-text task views.";
+"suggested-edits-alt-text-view-image-details" = "Text for image details button in alt-text view.";
 "table-of-contents-button-label" = "Accessibility label for the Table of Contents button {{Identical|Table of contents}}";
 "table-of-contents-close-accessibility-hint" = "Accessibility hint for closing table of contents {{Identical|Close}}";
 "table-of-contents-close-accessibility-label" = "Accessibility label for closing table of contents";
