Add publish toast.

--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -1027,6 +1027,7 @@
 "suggested-edits-alt-text-read-privacy-policy" = "Read privacy policy";
 "suggested-edits-alt-text-send-feedback" = "Send feedback";
 "suggested-edits-alt-text-skip-suggestion" = "Skip suggestion";
+"suggested-edits-alt-text-submitted-toast" = "Submitted!";
 "suggested-edits-alt-text-suggest-alt-text" = "Suggest alt text for image";
 "suggested-edits-alt-text-title" = "Add alt text";
 "suggested-edits-alt-text-view-image-details" = "View image details →";
