Allow user to tap through to preview and publish

--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -1045,6 +1045,7 @@
 "source-editor-accessibility-label-unordered" = "Make current line unordered list";
 "source-editor-accessibility-label-unordered-selected" = "Remove unordered list from current line";
 "source-editor-clear-formatting" = "Clear formatting";
+"source-editor-edit-published" = "Your edit was published.";
 "source-editor-find-replace-all" = "Replace all";
 "source-editor-find-replace-single" = "Replace";
 "source-editor-find-replace-with" = "Replace with...";
