--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -298,6 +298,7 @@
 "edit-published-subtitle" = "You just made Wikipedia better for everyone";
 "edit-reference-accessibility-label" = "Add reference syntax";
 "edit-reference-remove-accessibility-label" = "Remove reference syntax";
+"edit-show-web-preview" = "Show web preview";
 "edit-signature-accessibility-label" = "Add signature syntax";
 "edit-signature-remove-accessibility-label" = "Remove signature syntax";
 "edit-strikethrough-accessibility-label" = "Add strikethrough";
